--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -17,6 +17,7 @@
     var FundDocLinkApiUrl = ClientRoute.GenerateUrl(this, "FundDetail", "GetDocLink");
     var FundRuleTextApiUrl = ClientRoute.GenerateUrl(this, "FundDetail", "GetRuleText");
     var FundReturnAndNetValueApiUrl = ClientRoute.GenerateUrl(this, "FundDetail", "GetReturnAndNetValueTrend");
+    var FundReferenceIndexApiUrl = ClientRoute.GenerateUrl(this, "FundDetail", "GetReferenceIndex");
     var detailsUrl = FundRelatedSettingModel.GetFundDetailsUrl();
     var closeFiveYearsUrl = FundRelatedSettingModel.GetFundCloseFiveYearsUrl();
     var exposeUrl = FundRelatedSettingModel.GetFundExposeUrl();
@@ -3351,8 +3352,7 @@
                     $('[data-trend-filter="inputEnd"]').val(obj.enddate.replaceAll('-', '/'));
                     $('[data-trend-filter="inputStart"]').datepicker('setDate', obj.startdate.replaceAll('-', '/'));
                     $('[data-trend-filter="inputEnd"]').datepicker('setDate', obj.enddate.replaceAll('-', '/'));
-                }
-                else {
+                } else {
                     obj.startdate = obj.startdate.replaceAll('/', '-');
                     obj.enddate = obj.enddate.replaceAll('/', '-');
                 }
@@ -3361,7 +3361,6 @@
                 }
                 let text = "";
                 switch (obj.trend) {
-
                     case "ori":
                         text = "績效(原幣)"
                         break;
@@ -3372,7 +3371,6 @@
                         text = "淨值"
                         break;
                 }
-
                 initTrendChart(obj, text);
             }
             function roundToTwo(num) {
@@ -3405,32 +3403,58 @@
                         fundId: fundId,
                         ...obj
                     };
-                    $.ajax({
-                        url: '@FundReturnAndNetValueApiUrl',
-                        method: 'post',
-                        data: params,
-                        success: function (data) {
-                            let mapData = [];
-                            if (Object.keys(data.resultSet.result).length != 0) {
+                    const indexParams ={
+                    indexCode: '@BasicData.IndicatorIndexCode',
+                        ...obj
+                    };
+                    let p = [];
+                     let mapData = [];
+                     let mapData2 = [];
+                      p.push( $.ajax({url: '@FundReturnAndNetValueApiUrl', method: 'post',data: params}));
+                      p.push( $.ajax({url: '@FundReferenceIndexApiUrl', method: 'post',data: indexParams}));
+                       Promise.all(p).then(values => {
+                        $.each( values, function( index, value ) {
+                        let data = value;
+                        if(index === 0){
+                          if (Object.keys(data.resultSet.result).length != 0) {
                                 mapData = data.resultSet.result.map(item => {
                                     return {
                                         x: new Date(item.v1.replaceAll('/', '-')).getTime(),
+                                        upDown: Number(item.v2) < 0 ? 'down' : 'up',
                                         name: item.v1.replaceAll('/', '-'),
-                                        y: roundToTwo(item.v2)
+                                        y: roundToTwo(item.v2),
+                                        type: obj.trend == "netWorth" ? '淨值' : ''
                                     };
                                 });
                                 mapData.reverse();
                             }
-                            //const updateDate = data.body.updateDate.replaceAll('-', '/');
-                            //// 資料日期
-                            //$('[data-update-date="trend"]').text(updateDate);
-                            let series = {
+                        }else{
+                             if (Object.keys(data.resultSet.result).length != 0) {
+                                mapData2 = data.resultSet.result.map(item => {
+                                    return {
+                                        x: new Date(item.v1.replaceAll('/', '-')).getTime(),
+                                        upDown: Number(item.v2) < 0 ? 'down' : 'up',
+                                        name: item.v1.replaceAll('/', '-'),
+                                        y: roundToTwo(item.v2)
+                                    };
+                                });
+                                mapData2.reverse();
+                            }
+                        }
+                       });
+                            let series = [{
                                 name: text,
                                 data: mapData,
                                 legendSymbol: 'rectangle',
-                                color: obj.netWorth ? '#A4844E' : '#238C6C',
+                                color: obj.trend == "netWorth"  ? '#A4844E' : '#238C6C',
                                 turboThreshold: 0,
-                            };
+                                }, {
+                                name: '@BasicData.IndicatorIndexName',
+                                data: mapData2,
+                                legendSymbol: 'rectangle',
+                                turboThreshold: 0,
+                                color: '#F58220'
+                            }];
                             chart = Highcharts.stockChart('trendChart', {
                                 chart: {
                                     zooming: {
@@ -3493,17 +3517,33 @@
                                     }
                                 },
                                 tooltip: {
-                                    split: false,
-                                    useHTML: true,
-                                    formatter: function () {
-                                        var percentage = obj.trend == "netWorth" ? '' : '%';
-                                        const tooltip = '<div style="font-size: 14px">' + '<div style="margin-bottom: 8px; color: #9C9C9C">' + Highcharts.dateFormat('%Y/%m/%d', this.point.x) + '</div>' + '<span style="display:inline-block; color: ' + this.point.color + '; font-size: 18px; margin-right: 3px">\u25CF</span>' + this.point.series.name + ': ' + this.point.y + percentage + '</div>';
-                                        return tooltip;
-                                    },
-                                    shadow: {
-                                        color: 'rgba(0, 0, 0, 0.1)'
-                                    }
+                                split: false,
+                                shared: true,
+                                outside: true,
+                                useHTML: true,
+                                formatter: function() {
+                                    let percentage = '%';
+                                    let tooltipText = '';
+                                    this.points.forEach(point => {
+                                        let upDownClass = '';
+                                        if (point.point.upDown === 'up') {
+                                            upDownClass = 'o-rise';
+                                        } else {
+                                            upDownClass = 'o-fall';
+                                        }
+                                        if(point.point.type === '淨值'){
+                                            percentage = '';
+                                        }else{
+                                            percentage = '%';
+                                        }
+                                        tooltipText += '<div style="display: flex;">' + '<div style="margin-right: 4px">' + '<span style="color: ' + point.series.color + '; font-size: 18px; margin-right: 3px">\u25CF</span>' + '<span>' + point.series.name + ': ' + '</span>' + '</div>' + '<span class="' + upDownClass + '">' + Math.abs(point.y) + percentage +'</span>' + '</div>';
+                                    });
+                                    return '<div style="font-size: 14px">' + '<div style="margin-bottom: 8px; color: #9C9C9C">' + Highcharts.dateFormat('%Y/%m/%d', this.x) + '</div>' + tooltipText + '</div>';
                                 },
+                                shadow: {
+                                    color: 'rgba(0, 0, 0, 0.1)'
+                                }
+                            },
                                 xAxis: {
                                     type: 'datetime',
                                     tickPosition: 'inside',
@@ -3553,20 +3593,11 @@
                                         color: '#c3c3c3'
                                     }]
                                 },
-                                series: [series]
+                                series: series
                             });
                             $('[data-chart="trend"]').find('.c-empty').addClass('u-hidden');
                             $('[data-chart="trend"]').find('.c-chartBox, .l-dataNotes').removeClass('u-hidden');
-
-                        },
-                        error: function (err) {
-                            $('[data-chart="trend"]').find('.c-empty').removeClass('u-hidden');
-                            $('[data-chart="trend"]').find('.c-chartBox, .l-dataNotes').addClass('u-hidden');
-                            console.log(err)
-                        },
                     });
-
-
                 } catch (error) {
                     console.error('Error:', error);
                 }
@@ -3574,6 +3605,7 @@
         });
     })(jQuery, window, document);
 </script>
+
 
 <script defer>
     (function ($, window, document, undefined) {
