--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -1106,7 +1106,7 @@
                     $('[data-date=' + dateStr + ']').find('.fc-daygrid-day-events').html('<div class="o-eventBall"></div>');
                 }
             },
-            eventOrder: ["StatusCode", "start"],
+            eventOrder: ["StatusOrder", "start"],
             // 行事曆資料
             events: dataSource
         });
