基金搜尋頁查無資料時，顯示你可能會喜歡元件

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -988,7 +988,7 @@
     </div>
 </div>
 <div class="l-wrap">
-    <div class="c-tab c-tab--wide" data-filter-empty="true" style="display:none;">
+    <div class="c-tab c-tab--wide" data-filter-empty="true">
         <div class="c-tab__panel is-active">
             <div class="c-section">
                 <div class="c-section__content">
@@ -1000,6 +1000,7 @@
                     </div>
                 </div>
             </div>
+            @Html.Sitecore().Placeholder("InterestedFund")
         </div>
     </div>
 
