--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -214,8 +214,8 @@
                             <option value="">排序</option>
                             <option value="焦點消息高至低" data-sorting-column="FocusPair.Key" data-sorting-class="is-desc">焦點消息高至低</option>
                             <option value="焦點消息低至高" data-sorting-column="FocusPair.Key" data-sorting-class="is-asc">焦點消息低至高</option>
-                            <option value="日期高至低" data-sorting-column="DatePair.Key" data-sorting-class="is-desc">日期高至低</option>
-                            <option value="日期低至高" data-sorting-column="DatePair.Key" data-sorting-class="is-asc">日期低至高</option>
+                            <option value="日期新到舊" data-sorting-column="DatePair.Key" data-sorting-class="is-desc">日期新到舊</option>
+                            <option value="日期舊到新" data-sorting-column="DatePair.Key" data-sorting-class="is-asc">日期舊到新</option>
                             <option value="標題高至低" data-sorting-column="PageTitlePair.Key" data-sorting-class="is-desc">標題高至低</option>
                             <option value="標題低至高" data-sorting-column="PageTitlePair.Key" data-sorting-class="is-asc">標題低至高</option>
                         </select>
