--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_InfoSetting.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberSettings/_InfoSetting.cshtml
@@ -85,7 +85,7 @@
                             <input type="text" id="email" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入電子信箱">
                         </div>
                         <div class="l-form__text l-form__text--error u-hidden" id="emailErrorMsg">
-                            <div class="o-errorText"><span class="s4">請輸入電子信箱</span></div>
+                            <div class="o-errorText"><span class="s4">請輸入有效電子信箱</span></div>
                         </div>
                     </div>
                 </div>
