--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsult.cshtml
@@ -67,7 +67,7 @@
                                                 <input id="input-tel" type="tel" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入聯絡電話">
                                             </div>
                                             <div class="l-form__text l-form__text--error">
-                                                <div class="o-errorText"><span class="s4">請輸入聯絡電話</span></div>
+                                                <div class="o-errorText"><span class="s4">請輸入有效連絡電話</span></div>
                                             </div>
                                         </div>
                                     </div>
@@ -82,7 +82,7 @@
                                                 <input id="input-email" type="email" class="o-textbox o-textbox--full o-textbox--form" placeholder="輸入電子信箱">
                                             </div>
                                             <div class="l-form__text l-form__text--error">
-                                                <div class="o-errorText"><span class="s4">請輸入電子信箱</span></div>
+                                                <div class="o-errorText"><span class="s4">請輸入有效電子信箱</span></div>
                                             </div>
                                             <div class="l-form__text">
                                                 <span class="t-warning s4">請確實填寫電子信箱，系統將自動寄發本次預約訊息</span>
@@ -763,19 +763,19 @@
             //可接受的電話格式，以下A、O、X皆為數字
             //市話 區碼2~4碼，可(AA)或AA-，後面1~4碼+4碼，可OOOOXXXX也可OOOO-XXXX
             //手機 09開頭，可09AAOOOXXX或09AA-OOO-XXX
-            //最後一碼必為數字，除去()與-最多只能10碼，目前市話區碼大於2碼的後面號碼都小於8碼
+            //除去()與-最多只能10碼，目前市話區碼大於2碼的後面號碼都小於8碼
             var flag = true;
 
-            if (phone.startsWith('09')){
+            if (phone.startsWith('09')) {
                 let cellPhoneReg = /^09\d{2}(\d{6}|-\d{3}-\d{3})$/;
-                flag = cellPhoneReg.test(phone);    
+                flag = cellPhoneReg.test(phone);
             }
-            else {              
+            else {
                 let phoneReg = /^(\(0\d{1,3}\)|0\d{1,3}-?)\d{1,4}-?\d{4}$/;
-                flag = phoneReg.test(phone);  
+                flag = phoneReg.test(phone);
             }
 
-            flag = flag && phone.replaceAll('(','').replaceAll(')','').replaceAll('-','').length <= 10;
+            flag = flag && phone.replaceAll('(', '').replaceAll(')', '').replaceAll('-', '').length <= 10;
 
             return flag;
         }
@@ -867,25 +867,25 @@
                     infos.forEach(info => {
                         $('#customerInfo').append(
                             `<tr>
-                                 <td>
-                                     <label class="o-radio o-radio--box">
-                                         <input class="o-radio__input" type="radio" name="radio" value="${DOMPurify.sanitize(info.WebBankId)}" data-client>
-                                         <div class="o-radio__text"></div>
-                                     </label>
-                                 </td >
-                                 <td>
-                                     ${DOMPurify.sanitize(info.CustomerName)}
-                                 </td>
-                                 <td>
-                                     ${DOMPurify.sanitize(info.CIF_ID)}
-                                 </td>
-                                 <td>
-                                     ${DOMPurify.sanitize(info.BranchName)}
-                                 </td>
-                             </tr>`
+                                     <td>
+                                         <label class="o-radio o-radio--box">
+                                             <input class="o-radio__input" type="radio" name="radio" value="${DOMPurify.sanitize(info.WebBankId)}" data-client>
+                                             <div class="o-radio__text"></div>
+                                         </label>
+                                     </td >
+                                     <td>
+                                         ${DOMPurify.sanitize(info.CustomerName)}
+                                     </td>
+                                     <td>
+                                         ${DOMPurify.sanitize(info.CIF_ID)}
+                                     </td>
+                                     <td>
+                                         ${DOMPurify.sanitize(info.BranchName)}
+                                     </td>
+                                 </tr>`
                         );
                     });
-                    
+
 
                     $.magnificPopup.open({
                         items: {
@@ -930,25 +930,25 @@
                     infos.forEach(info => {
                         $('#customerInfo').append(
                             `<tr>
-                                 <td>
-                                     <label class="o-radio o-radio--box">
-                                         <input class="o-radio__input" type="radio" name="radio" value="${DOMPurify.sanitize(info.WebBankId)}" data-client>
-                                         <div class="o-radio__text"></div>
-                                     </label>
-                                 </td >
-                                 <td>
-                                     ${DOMPurify.sanitize(info.CustomerName)}
-                                 </td>
-                                 <td>
-                                     ${DOMPurify.sanitize(info.CIF_ID)}
-                                 </td>
-                                 <td>
-                                     ${DOMPurify.sanitize(info.BranchName)}
-                                 </td>
-                             </tr>`
+                                     <td>
+                                         <label class="o-radio o-radio--box">
+                                             <input class="o-radio__input" type="radio" name="radio" value="${DOMPurify.sanitize(info.WebBankId)}" data-client>
+                                             <div class="o-radio__text"></div>
+                                         </label>
+                                     </td >
+                                     <td>
+                                         ${DOMPurify.sanitize(info.CustomerName)}
+                                     </td>
+                                     <td>
+                                         ${DOMPurify.sanitize(info.CIF_ID)}
+                                     </td>
+                                     <td>
+                                         ${DOMPurify.sanitize(info.BranchName)}
+                                     </td>
+                                 </tr>`
                         );
                     });
-                    
+
 
                     $.magnificPopup.open({
                         items: {
