Update : 最新消息和市場新聞調整小版篩選按鈕文字。

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -212,8 +212,8 @@
                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="newsTable" id="uid-sortbox">
                             <option value="">排序</option>
-                            <option value="焦點消息高至低" data-sorting-column="FocusPair.Key" data-sorting-class="is-desc">焦點消息高至低</option>
-                            <option value="焦點消息低至高" data-sorting-column="FocusPair.Key" data-sorting-class="is-asc">焦點消息低至高</option>
+                            <option value="焦點消息新到舊" data-sorting-column="FocusPair.Key" data-sorting-class="is-desc">焦點消息新到舊</option>
+                            <option value="焦點消息舊到新" data-sorting-column="FocusPair.Key" data-sorting-class="is-asc">焦點消息舊到新</option>
                             <option value="日期新到舊" data-sorting-column="DatePair.Key" data-sorting-class="is-desc">日期新到舊</option>
                             <option value="日期舊到新" data-sorting-column="DatePair.Key" data-sorting-class="is-asc">日期舊到新</option>
                             <option value="標題高至低" data-sorting-column="PageTitlePair.Key" data-sorting-class="is-desc">標題高至低</option>
