--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -290,8 +290,8 @@
                             <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                             <select class="o-sortingbox__input" data-sortingbox="true" id="uid-sortbox">
                                 <option value="">排序</option>
-                                <option value="焦點新聞高至低" data-sorting-column="HotNews" data-sorting-class="is-desc">焦點新聞高至低</option>
-                                <option value="焦點新聞低至高" data-sorting-column="HotNews" data-sorting-class="is-asc">焦點新聞低至高</option>
+                                <option value="焦點新聞新到舊" data-sorting-column="HotNews" data-sorting-class="is-desc">焦點新聞新到舊</option>
+                                <option value="焦點新聞舊到新" data-sorting-column="HotNews" data-sorting-class="is-asc">焦點新聞舊到新</option>
                                 <option value="日期新到舊" data-sorting-column="NewsDate" data-sorting-class="is-desc">日期新到舊</option>
                                 <option value="日期舊到新" data-sorting-column="NewsDate" data-sorting-class="is-asc">日期舊到新</option>
                                 @*<option value="新聞類別高至低" data-sorting-column="NewsType" data-sorting-class="is-desc">新聞類別高至低</option>
